--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         versionCode 1000
         versionName "1.0.0"
         resConfigs "en", "de"
-        resConfigs "nodpi", "hdpi", "xhdpi", "xxhdpi"
+        resConfigs "nodpi", "hdpi", "xhdpi", "xxhdpi", "xxxhdpi"
     }
 
     lintOptions {
