--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,8 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:support-v4:21.0.3'
+    compile "com.android.support:appcompat-v7:21.0.3"
+
     compile 'uk.co.chrisjenx:calligraphy:1.2.0'
 }
