--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.alexanderkohout.seriesreminder" >
+          package="de.alexanderkohout.seriesreminder">
 
     <application
         android:allowBackup="true"
@@ -11,10 +11,10 @@
 
         <activity
             android:name=".ui.SeriesActivity"
-            android:label="@string/app_name" >
+            android:label="@string/your_tracked_series">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
